# tinyworld

./: .gitignore  README.md  RESPONSIBLE_AI_FAQ.md  build_and_install_package_from_repo.bat  install_package_from_repo.bat  pyproject.toml
.ado/: 1ES.Pipeline.yml  1ES.Unofficial.PipelineTemplate.yml
data/extractions/: synthetic_data_generation.out.csv
examples/: advertisement_for_tv.ipynb  create_ad_for_appartment.ipynb  online_advertisement_for_travel.ipynb  product_brainstorming.ipynb  synthetic_data_generation.ipynb
tests/: checkpoint_test.json  control_test.json  testing_utils.py  tinyfolks-cache-default.json
tests/non_functional/: test_security.py
tests/scenarios/: test_advertisement_scenarios.py  test_basic_scenarios.py  test_brainstorming_scenarios.py  tests_cache.pickle
tests/unit/: test_control.py  test_enrichment.py  test_experimentation.py  test_personchecker.py  test_personfactory.py  test_story.py  test_tinyperson.py  test_tinyworld.py  test_utils.py  tests_cache.pickle
tinytroupe/: __init__.py  agent.py  config.ini  control.py  enrichment.py  environment.py  examples.py  experimentation.py  extraction.py  factory.py  openai_utils.py  personchecker.py  personfactory.py  story.py  tools.py  utils.py  validation.py
tinytroupe/clients/: __init__.py  azure_client.py  config.py  ollama_client.py  openai_client.py
tinytroupe/prompts/: basic_agent.mustache  generate_person.mustache  story.continuation.system.mustache  story.continuation.user.mustache
